--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.10",
     "@starknet-react/core": "^0.13.3",
     "autoprefixer": "^10.4.8",
+    "firebase": "^9.10.0",
+    "firebaseui": "^6.0.1",
     "get-starknet": "^1.5.0",
     "next": "12.2.4",
     "postcss": "^8.4.16",
