--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@reduxjs/toolkit": "^1.8.5",
     "@starknet-react/core": "^0.13.3",
     "autoprefixer": "^10.4.8",
     "firebase": "^9.10.0",
     "firebaseui": "^6.0.1",
     "get-starknet": "^1.5.0",
+    "grid-engine": "^2.20.0",
     "next": "12.2.4",
+    "next-redux-wrapper": "^8.0.0",
+    "phaser": "^3.55.2",
+    "phaser3-plugin-isometric": "^0.0.7",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-isometric-tilemap": "^1.0.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "starknet": "^3.18.2",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
