--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@react-three/fiber": "^8.8.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@starknet-react/core": "^0.13.3",
     "autoprefixer": "^10.4.8",
@@ -32,10 +33,12 @@
     "redux-thunk": "^2.4.1",
     "starknet": "^3.18.2",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "three": "^0.144.0"
   },
   "devDependencies": {
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "12.2.4",
+    "next-transpile-modules": "^9.0.0"
   }
 }
