--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@react-three/drei": "^9.32.1",
     "@react-three/fiber": "^8.8.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@starknet-react/core": "^0.13.3",
