--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.1.58",
+    "@cartridge/controller": "^0.1.58",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@react-three/drei": "^9.32.1",
@@ -32,7 +34,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "starknet": "^3.19.0",
+    "starknet": "^4.4.2",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.8",
     "three": "^0.144.0"
