WIP: connecting MongoDB for event indexing

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "firebaseui": "^6.0.1",
     "get-starknet": "^1.5.0",
     "grid-engine": "^2.20.0",
+    "mongodb": "^3.7.3",
     "next": "12.2.4",
+    "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.0.0",
     "phaser": "^3.55.2",
     "phaser3-plugin-isometric": "^0.0.7",
