--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "three": "^0.144.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.4.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "next-transpile-modules": "^9.0.0"
