--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
+    "@types/mongodb": "^4.0.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "next-transpile-modules": "^9.0.0"
