--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "starknet": "^4.4.2",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.8",
-    "three": "^0.144.0"
+    "three": "^0.144.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.4.0",
