--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "starknet": "^4.4.2",
     "styled-components": "^5.3.5",
